--- a/.travis.yml
+++ b/.travis.yml
@@ -15,19 +15,17 @@ cache:
   - $HOME/.CommandBox
 
 before_install:
-- sudo apt-key adv --keyserver keys.gnupg.net --recv 6DA70622
-- sudo echo "deb http://downloads.ortussolutions.com/debs/noarch /" | sudo tee -a
-  /etc/apt/sources.list.d/commandbox.list
+  - sudo apt-key adv --keyserver keys.gnupg.net --recv 6DA70622
+  - sudo echo "deb http://downloads.ortussolutions.com/debs/noarch /" | sudo tee -a
+    /etc/apt/sources.list.d/commandbox.list
 
 install:
-- sudo apt-get update && sudo apt-get --assume-yes install commandbox
-- box install
-- box server start port=8080 openbrowser=false
+  - sudo apt-get update && sudo apt-get --assume-yes install commandbox
+  - box install
+  - box server start port=8080 openbrowser=false
 
 before_script:
   - box server start cfengine=$ENGINE port=8500 openbrowser=false
 
-script: >
-  testResults="echo $(box testbox run reporter=mintext)";
-  echo "$testResults";
-  if grep -i "\[Failures: [1-9][0-9]\?[0-9]\?\]\|\[Errors: [1-9][0-9]\?[0-9]\?\]\|<t[^>]*>\|<b[^>]*>" <<< $testResults;  then exit 1; fi
+script:
+  - box testbox run reporter=mintext
