update travis-ci file

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - box server start port=8080 openbrowser=false
 
 before_script:
-  - box server start cfengine=$ENGINE port=8500 openbrowser=false
+  - box server start cfengine=$ENGINE port=8500 openbrowser=false --force
 
 script:
   - box testbox run reporter=mintext
