--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ dist: trusty
 
 env:
   matrix:
-    - ENGINE=lucee@4.5
     - ENGINE=lucee@5
+    - ENGINE=lucee@4.5
+    - ENGINE=adobe@2018
     - ENGINE=adobe@2016
     - ENGINE=adobe@11
     - ENGINE=adobe@10
