--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ env:
     - ENGINE=lucee@5
     - ENGINE=lucee@4.5
     #- ENGINE=adobe@2018
-    #- ENGINE=adobe@2016
-    #- ENGINE=adobe@11
+    - ENGINE=adobe@2016
+    - ENGINE=adobe@11
 
 cache:
   directories:
