--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   matrix:
     - ENGINE=lucee@5
     - ENGINE=lucee@4.5
-    #- ENGINE=adobe@2018
+    - ENGINE=adobe@2018
     - ENGINE=adobe@2016
     - ENGINE=adobe@11
 
